--- a/docs/技术框架方案0.md
+++ b/docs/技术框架方案0.md
@@ -1,5 +1,5 @@
 #前端（web端）技术框架
-为构建一个任务管理应用的前端，以下是一个推荐的技术栈方案，旨在实现快速验证和后续扩展，同时确保强大的界面显示和交互效果。
+为构建一个任务管理应用的前端，以下是一个推荐的技术栈方案，旨在实现快速验证和后续扩展，同时确保强大的界面显示和交互效果。。
 
 ###技术栈方案
     
