--- a/docs/缓存优化总结.md
+++ b/docs/缓存优化总结.md
@@ -261,6 +261,126 @@ const safeCacheOperation = (operation: () => void, fallback?: () => void) => {
 - [x] **数据损坏**：缓存数据格式错误的恢复
 - [x] **并发访问**：多标签页同时操作的数据一致性
 
+## ⚡ 关键问题解决方案
+
+### 1. 添加事项后立即显示问题
+
+#### 问题描述
+在使用快速添加组件(`TaskAddDrawer`)或完整新建任务页面(`NewTaskPage`)添加任务成功后，新任务未能立即在当前页面显示，需要手动刷新页面才能看到。
+
+#### 根本原因
+- **缓存更新不同步**：组件添加任务后仅调用API，未同步更新本地缓存
+- **页面无感知**：当前页面无法感知其他组件的数据变更
+- **数据源不一致**：页面显示的数据来自缓存，而新数据仅存在于后端
+
+#### 完整解决方案
+
+##### 步骤1：组件内缓存同步
+```typescript
+// TaskAddDrawer.tsx 中的实现
+const handleAddTask = async () => {
+  try {
+    // 1. 调用API创建任务
+    const result = await createItem(taskData);
+    
+    // 2. 更新本地状态（Context）
+    dispatch({ type: 'ADD_TASK', payload: newTask });
+    
+    // 3. 同步更新缓存数据
+    const today = new Date().toISOString().split('T')[0];
+    const cacheKey = `timeline-tasks-${today}`;
+    const existingCache = sessionStorage.getItem(cacheKey);
+    
+    if (existingCache) {
+      const cachedTasks = JSON.parse(existingCache);
+      const updatedTasks = [...cachedTasks, result];
+      sessionStorage.setItem(cacheKey, JSON.stringify(updatedTasks));
+      
+      // 更新缓存元数据
+      const metadataKey = 'timeline-cache-metadata';
+      const metadata = sessionStorage.getItem(metadataKey);
+      if (metadata) {
+        const parsed = JSON.parse(metadata);
+        parsed[today] = Date.now();
+        sessionStorage.setItem(metadataKey, JSON.stringify(parsed));
+      }
+    }
+    
+    // 4. 发送全局事件通知页面刷新
+    window.dispatchEvent(new CustomEvent('taskCacheUpdated', {
+      detail: { action: 'add', taskId: result.id, taskTitle: result.title }
+    }));
+    
+  } catch (error) {
+    console.error('添加任务失败:', error);
+  }
+};
+```
+
+##### 步骤2：页面事件监听
+```typescript
+// HomePage.tsx 和 TimelinePage.tsx 中的实现
+useEffect(() => {
+  // 监听任务缓存更新事件
+  const handleTaskCacheUpdated = (event: CustomEvent) => {
+    console.log('📢 收到任务缓存更新事件', event.detail);
+    const refreshed = refreshFromCache();
+    if (!refreshed) {
+      console.log('📡 缓存刷新失败，重新加载数据');
+      loadTasksByDate(selectedDate); // 或 loadTodayTasks()
+    }
+  };
+
+  window.addEventListener('taskCacheUpdated', handleTaskCacheUpdated as EventListener);
+  
+  return () => {
+    window.removeEventListener('taskCacheUpdated', handleTaskCacheUpdated as EventListener);
+  };
+}, [refreshFromCache, loadTasks]);
+```
+
+##### 步骤3：缓存格式统一
+确保所有组件使用相同的缓存键格式：
+```typescript
+// 统一缓存键命名
+const TIMELINE_CACHE_PREFIX = 'timeline-tasks-';
+const CACHE_METADATA_KEY = 'timeline-cache-metadata';
+
+// 首页和时间轴页面共享同一缓存格式
+const todayKey = format(new Date(), 'yyyy-MM-dd');
+const cacheKey = `${TIMELINE_CACHE_PREFIX}${todayKey}`;
+```
+
+#### 实施效果
+- ✅ **即时显示**：添加任务后立即在当前页面显示
+- ✅ **数据一致性**：所有页面看到相同的最新数据
+- ✅ **无需刷新**：用户无需手动刷新页面
+- ✅ **性能优化**：减少不必要的API重复调用
+
+### 2. 跨组件数据同步模式
+
+#### 事件驱动更新
+使用自定义事件实现跨组件通信：
+```typescript
+// 发送事件
+window.dispatchEvent(new CustomEvent('taskCacheUpdated', {
+  detail: { 
+    action: 'add|update|delete', 
+    taskId: string,
+    data?: any 
+  }
+}));
+
+// 监听事件
+window.addEventListener('taskCacheUpdated', handleCacheUpdate);
+```
+
+#### 适用场景
+- 快速添加任务后立即显示
+- 编辑任务后同步更新列表
+- 删除任务后实时移除显示
+- 完成状态变更后UI同步
+
 ## 🔧 调试和监控
 
 ### 1. 调试信息
@@ -271,6 +391,8 @@ console.log('🏠 HomePage: 优先尝试从缓存加载数据');
 console.log('✅ HomePage: 使用缓存数据初始化页面');
 console.log('📅 TimelinePage: 初始化，加载当天任务');
 console.log('💾 项目页面: 分类缓存已更新', { categoryId, taskCount });
+console.log('📢 收到任务缓存更新事件', event.detail);
+console.log('✅ TaskAddDrawer: 已将新任务添加到时间轴缓存');
 ```
 
 ### 2. 缓存状态监控
@@ -338,5 +460,5 @@ const handleCacheError = (error: Error, context: string) => {
 ---
 
 *最后更新时间：2024-12-19*  
-*文档版本：v2.0*  
+*文档版本：v2.1*  
 *维护者：项目团队* 
